...
            "value": "Calendrier"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Calendar"
          }
        }
      }
    },
    "cancel_button": {
      "localizations": {
...
            "state": "translated",
            "value": "Flow"
          }
        }
      }
    },
    "flow_light": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Léger"
          }
...
    },
    "insights_title": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Insights"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Insights"
...
            "state": "translated",
            "value": "Enregistrer aujourd'hui"
          }
        }
      }
    },
    "log_today_button": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Logger aujourd'hui"
          }
...
    "nav_today": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Today"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Aujourd'hui"
...
            "state": "translated",
            "value": "Pill reminder"
          }
        }
      }
    },
    "onboarding_back": {
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Retour"
          }
...
            "value": "Bienvenue sur LUNA"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Welcome to LUNA"
          }
        }
      }
    },
    "ovulation_day_a11y": {
      "localizations": {
...
            "value": "Moi"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Me"
          }
        }
      }
    },
    "tab_settings_a11y": {
      "extractionState": "manual",
...
            "state": "translated",
            "value": "Pas de compte iCloud"
          }
        }
      }
    },
    "settings_change_pin": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Change PIN"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Changer le PIN"
...
